Adding name filtering to heroes and villains get all API endpoints (#44)
