# rest-heroes/openapi-schema.yml
@@ -18,6 +18,13 @@ paths:
       tags:
       - heroes
       summary: Returns all the heroes from the database
+      parameters:
+      - name: name_filter
+        in: query
+        description: An optional filter parameter to filter results by name
+        required: false
+        schema:
+          type: string
       responses:
         "200":
           description: Gets all heroes
